# sellart-rag

./: .dockerignore  .gitignore  Dockerfile  config.py  docker-compose.yml  index_document.py  main.py  pyproject.toml  requirements.txt
config/: prompt.py
lib/: memory.py  utils.py
models/: chat_model.py
storage/: docstore.json  index_store.json
